[tool.poetry]
name = "scanner-internet"
version = "0.1.0"
description = "Varredura aleatória de IPs com armazenamento em banco e dashboard"
authors = ["Seu Nome <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pymongo = "^4.6.0"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-dotenv = "^1.0.0"
schedule = "^1.2.0"
beautifulsoup4 = "^4.12.0"
redis = "^5.0.0"
aiohttp = "^3.9.0"
capsolver = "^1.0.0"
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
